--- a/app/styles/scss/_custom.scss
+++ b/app/styles/scss/_custom.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 /**********************************
 
 custom
@@ -6,7 +8,7 @@ custom
 /*-------------------------
 swiper
 --------------------------*/
-.tst-slider-pagination, 
+.tst-slider-pagination,
 .tst-slider-navigation .tst-slider-pagination,
 body .tst-slider-navigation .tst-slider-pagination {
   display: flex;
@@ -24,16 +26,16 @@ body .tst-slider-navigation .tst-slider-pagination {
   width: 8px;
   margin: 0 3px !important;
   opacity: 0.2;
-  background-color: $dl1 !important;
+  background-color: variables.$dl1 !important;
   border: solid 3px transparent !important;
-  transition: $tr-sm;
+  transition: variables.$tr-sm;
 
   &.swiper-pagination-bullet-active {
     transform: scale(1.6);
     opacity: 1;
     margin: 0 5px !important;
-    border: solid 3px $ac !important;
-    background-color: $dl1 !important;
+    border: solid 3px variables.$ac !important;
+    background-color: variables.$dl1 !important;
   }
 
   &:focus {
@@ -54,7 +56,7 @@ body .tst-slider-navigation .tst-slider-pagination {
     & .tst-slider-btn {
       padding-top: 1px;
       margin-left: 15px;
-      background-color: $ac;
+      background-color: variables.$ac;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -63,20 +65,20 @@ body .tst-slider-navigation .tst-slider-pagination {
       cursor: pointer;
       border-radius: 50%;
       font-size: 14px;
-      transition: $tr-sm;
+      transition: variables.$tr-sm;
 
       &:hover {
-        filter:brightness(108%);
+        filter: brightness(108%);
         transform: scale(1.015);
       }
 
       &.swiper-button-disabled {
         pointer-events: none;
         opacity: 0.3;
-        background-color: rgba(26,47,51,0.10);
+        background-color: rgba(26, 47, 51, 0.10);
 
         &:hover {
-          background-color: rgba(26,47,51,0.10);
+          background-color: rgba(26, 47, 51, 0.10);
           opacity: 0.1;
         }
       }
@@ -109,29 +111,32 @@ body .tst-slider-navigation .tst-slider-pagination {
 }
 
 @media (max-width: 767px) {
-	.tst-dynamic-banner {min-height: 80px;}
+  .tst-dynamic-banner {
+    min-height: 80px;
+  }
 }
 
 @media (min-width: 768px) {
-	.tst-main-slider-navigation {
-		margin-left: -360px;
-		width: 720px;
-	}
+  .tst-main-slider-navigation {
+    margin-left: -360px;
+    width: 720px;
+  }
 }
 
 @media (min-width: 992px) {
-	.tst-main-slider-navigation {
-		margin-left: -480px;
-		width: 960px;
-	}
+  .tst-main-slider-navigation {
+    margin-left: -480px;
+    width: 960px;
+  }
 }
 
 @media (min-width: 1200px) {
-	.tst-main-slider-navigation {
-		margin-left: -600px;
-		width: 1200px;
-	}
+  .tst-main-slider-navigation {
+    margin-left: -600px;
+    width: 1200px;
+  }
 }
+
 @media (max-width: 767px) {
   .tst-main-slider-navigation {
     justify-content: space-between;
@@ -143,14 +148,14 @@ body .tst-slider-navigation .tst-slider-pagination {
 
   & .tst-slider-btn {
     cursor: pointer;
-    color: $wl1;
+    color: variables.$wl1;
     height: 40px;
     width: 40px;
     font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: $tr-sm;
+    transition: variables.$tr-sm;
 
     &.swiper-button-disabled {
       opacity: 0.5;
@@ -158,7 +163,7 @@ body .tst-slider-navigation .tst-slider-pagination {
     }
 
     & i {
-      text-shadow: 0 5px 20px rgba(26,47,51,0.95);
+      text-shadow: 0 5px 20px rgba(26, 47, 51, 0.95);
     }
 
     &:focus {
@@ -182,15 +187,15 @@ body .tst-slider-navigation .tst-slider-pagination {
     width: 10px;
     margin: 0 20px 0 0 !important;
     opacity: 1;
-    border: solid 3px $wl1 !important;
-    box-shadow: 0 5px 10px 0 rgba(26,47,51,0.9) !important;
-    transition: $tr-sm;
+    border: solid 3px variables.$wl1 !important;
+    box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.9) !important;
+    transition: variables.$tr-sm;
     background-color: transparent !important;
 
     &.swiper-pagination-bullet-active {
       transform: scale(1.5);
       margin: 0 20px 0 0 !important;
-      border: solid 2px $ac !important;
+      border: solid 2px variables.$ac !important;
       background-color: transparent !important;
     }
 
@@ -203,6 +208,7 @@ body .tst-slider-navigation .tst-slider-pagination {
     }
   }
 }
+
 @media (max-width: 790px) {
   .tst-slider-navigation {
     display: flex;
@@ -238,6 +244,7 @@ body .tst-slider-navigation .tst-slider-pagination {
     bottom: 15px;
   }
 }
+
 /*-------------------------
 datepicker
 --------------------------*/
@@ -245,28 +252,28 @@ datepicker
   z-index: 999999999999999;
   border: none;
   font-weight: 400;
-  font-family: $sf;
-  box-shadow: 0 2px 5px 0 rgba(26,47,51,0.11);
+  font-family: variables.$sf;
+  box-shadow: 0 2px 5px 0 rgba(26, 47, 51, 0.11);
 
   & .datepicker--nav {
     padding-top: 10px;
-    color: $dl1 !important;
+    color: variables.$dl1 !important;
     opacity: 1;
     font-size: 14px;
   }
 
   & .datepicker--cell.-current- {
-    background-color: rgba(26,47,51 ,.2);
-    color: $dl1;
+    background-color: rgba(26, 47, 51, .2);
+    color: variables.$dl1;
   }
 
   & .datepicker--cell.-selected-,
   & .datepicker--cell.-selected-.-current- {
-    background: $ac;
+    background: variables.$ac;
     color: #fff;
 
     &:hover {
-      background: $ac;
+      background: variables.$ac;
     }
   }
 }
@@ -274,6 +281,7 @@ datepicker
 .datepicker--pointer {
   display: none;
 }
+
 /*-------------------------
 nice select
 --------------------------*/
@@ -282,24 +290,24 @@ nice select
   height: 50px;
   padding: 0 20px;
   margin-bottom: 30px;
-  box-shadow: 0 2px 5px 0 rgba(26,47,51,0.11);
+  box-shadow: 0 2px 5px 0 rgba(26, 47, 51, 0.11);
 
   & span {
     line-height: 53px;
-    color: $dl1 !important;
+    color: variables.$dl1 !important;
   }
 
   & .list {
     max-height: 200px;
     overflow-y: scroll;
-    box-shadow: 0 2px 5px 0 rgba(26,47,51,0.11);
+    box-shadow: 0 2px 5px 0 rgba(26, 47, 51, 0.11);
     margin: 0;
     padding: 0;
     margin-top: 10px;
     padding-bottom: 0;
 
     &::-webkit-scrollbar-track {
-      background: rgba(0,0,0,0);
+      background: rgba(0, 0, 0, 0);
     }
 
     & li {
@@ -309,12 +317,14 @@ nice select
     }
   }
 }
+
 /*-------------------------
 fancybox
 --------------------------*/
 .fancybox-slide--video .fancybox-content {
   width: 80% !important;
 }
+
 /*-------------------------
 mapbox
 --------------------------*/
@@ -323,7 +333,7 @@ mapbox
     animation: marker 1s infinite ease-in-out;
 
     & path {
-      fill: $ac;
+      fill: variables.$ac;
     }
 
     & circle {
@@ -331,6 +341,7 @@ mapbox
     }
   }
 }
+
 @keyframes marker {
   0% {
     transform: translateY(0);
@@ -344,6 +355,7 @@ mapbox
     transform: translateY(0);
   }
 }
+
 @media (max-width: 790px) {
   .mapboxgl-marker {
     display: none;
