--- a/app/styles/scss/_menu.scss
+++ b/app/styles/scss/_menu.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 /**********************************
 
 menu
@@ -7,7 +9,7 @@ menu
 default card
 -------------------------*/
 .tst-menu-book-item {
-  background-color: $card;
+  background-color: variables.$card;
   box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.15);
   border-radius: 5px;
   margin-bottom: 60px;
@@ -32,7 +34,7 @@ default card
       height: 100%;
       object-fit: cover;
       object-position: center;
-      transition: $tr-md;
+      transition: variables.$tr-md;
     }
 
     &:focus {
@@ -181,25 +183,25 @@ default card
     display: inline-block;
     height: 50px;
     width: auto;
-    color: $dl1 !important;
+    color: variables.$dl1 !important;
     line-height: 54px;
     cursor: pointer;
-    font-family: $sf;
+    font-family: variables.$sf;
     transform: scale(1) !important;
     text-transform: uppercase;
     font-size: 12px;
     letter-spacing: 1px;
     font-weight: 800;
     border: none !important;
-    transition: $tr-sm;
+    transition: variables.$tr-sm;
     border-radius: 5px;
     width: auto;
 
     &.swiper-pagination-bullet-active {
       transform: scale(1) !important;
       border: none !important;
-      color: $dl1 !important;
-      background-color: $ac !important;
+      color: variables.$dl1 !important;
+      background-color: variables.$ac !important;
     }
   }
 }
@@ -208,7 +210,7 @@ default card
   overflow: visible !important;
 
   & .swiper-slide {
-    background-color: $bg;
+    background-color: variables.$bg;
   }
 }
 
