--- a/app/styles/scss/_checkout.scss
+++ b/app/styles/scss/_checkout.scss
@@ -8,14 +8,83 @@
             display: block;
             margin-bottom: 0.5rem;
             color: #1a2f33;
+            font-family: var(--font-josefin_sans);
+            font-size: 14px;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
         }
 
         input,
-        textarea {
+        select {
+            width: 100%;
+            height: 50px;
+            padding: 0 20px;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px 0 rgba(26, 47, 51, 0.11);
+            color: #1a2f33;
+            opacity: 1;
+            font-size: 14px;
+            font-weight: 400;
+            font-family: var(--font-josefin_sans);
+            background-color: #fff;
+
             &.error {
                 border-color: #FF5252;
                 background-color: rgba(255, 82, 82, 0.05);
                 margin-bottom: 0.25rem;
+            }
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        textarea {
+            width: 100%;
+            min-height: 120px;
+            padding: 15px 20px;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px 0 rgba(26, 47, 51, 0.11);
+            color: #1a2f33;
+            opacity: 1;
+            font-size: 14px;
+            font-weight: 400;
+            font-family: var(--font-josefin_sans);
+            background-color: #fff;
+            resize: vertical;
+
+            &.error {
+                border-color: #FF5252;
+                background-color: rgba(255, 82, 82, 0.05);
+                margin-bottom: 0.25rem;
+            }
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        select {
+            cursor: pointer;
+            appearance: none;
+            background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+            background-repeat: no-repeat;
+            background-position: right 10px center;
+            background-size: 15px;
+            padding-right: 35px;
+
+            &::-ms-expand {
+                display: none;
+            }
+
+            option {
+                background-color: #fff;
+                color: #1a2f33;
+                padding: 10px;
+                font-family: var(--font-josefin_sans);
+                font-size: 14px;
             }
         }
 
@@ -26,6 +95,7 @@
             margin-top: 0.25rem;
             position: relative;
             display: block;
+            font-family: var(--font-josefin_sans);
         }
     }
 
